# mre-rs

./: Cargo.toml
src/: alloc.rs  allocator.rs  app.rs  entropy.rs  entry.rs  keyboard.rs  lib.rs  macros.rs  msg.rs  panic.rs  process.rs  res.rs  stack.rs  sys.rs  task.rs  timer.rs
src/ffi/: app.rs  bitstream.rs  blt.rs  canvas.rs  file.rs  fs.rs  image.rs  keyboard.rs  layer.rs  macros.rs  mem.rs  mod.rs  msg.rs  net.rs  pcm.rs  pmng.rs  res.rs  screen.rs  shape.rs  sys.rs  text.rs  time.rs  timer.rs  ucs2.rs
src/fs/: attributes.rs  copy.rs  file.rs  fs.rs  metadata.rs  mod.rs  path.rs  readdir.rs
src/graphics/: blt.rs  canvas.rs  color.rs  eg_support.rs  image.rs  layer.rs  mod.rs  screen.rs  shape.rs  text.rs
src/net/: dns.rs  http.rs  mod.rs  tcp.rs  tls.rs
src/sys/: file.rs  fs.rs  mem.rs  mod.rs  time.rs
src/time/: datetime.rs  instant.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
